--- a/index.html
+++ b/index.html
@@ -4,62 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="margin: 0; font-family: Arial, sans-serif; color: #333; line-height: 1.6;">
 
-    <header>
-        <div class="logo">MyWebsite</div>
+    <!-- Header -->
+    <header style="display: flex; justify-content: space-between; align-items: center; background: #333; color: white; padding: 1rem 2rem; position: fixed; width: 100%; top: 0;">
+        <div style="font-size: 1.5rem; font-weight: bold;">MyWebsite</div>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul style="list-style: none; display: flex; gap: 1.5rem; padding: 0; margin: 0;">
+                <li><a href="#home" style="color: white; text-decoration: none;">Home</a></li>
+                <li><a href="#services" style="color: white; text-decoration: none;">Services</a></li>
+                <li><a href="#about" style="color: white; text-decoration: none;">About</a></li>
+                <li><a href="#contact" style="color: white; text-decoration: none;">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home" class="hero">
-        <h1>Welcome to My Website</h1>
-        <p>We provide the best solutions for your needs.</p>
-        <a href="#services" class="btn">Explore Services</a>
+    <!-- Hero Section -->
+    <section id="home" style="height: 100vh; background: url('https://source.unsplash.com/1600x900/?technology') no-repeat center center/cover; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: white; padding: 2rem;">
+        <h1 style="font-size: 2.5rem;">Welcome to My Website</h1>
+        <p style="font-size: 1.2rem; margin-bottom: 1rem;">We provide the best solutions for your needs.</p>
+        <a href="#services" style="background: #ff9800; color: white; padding: 0.75rem 1.5rem; text-decoration: none; font-size: 1.1rem; border-radius: 5px; transition: 0.3s;">Explore Services</a>
     </section>
 
-    <section id="services">
+    <!-- Services Section -->
+    <section id="services" style="padding: 4rem 2rem; text-align: center;">
         <h2>Our Services</h2>
-        <div class="service-container">
-            <div class="service">
+        <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+            <div style="background: #f4f4f4; padding: 1.5rem; border-radius: 8px; width: 250px;">
                 <h3>Web Development</h3>
                 <p>We build modern and responsive websites.</p>
             </div>
-            <div class="service">
+            <div style="background: #f4f4f4; padding: 1.5rem; border-radius: 8px; width: 250px;">
                 <h3>SEO Optimization</h3>
                 <p>Boost your website’s ranking on search engines.</p>
             </div>
-            <div class="service">
+            <div style="background: #f4f4f4; padding: 1.5rem; border-radius: 8px; width: 250px;">
                 <h3>Digital Marketing</h3>
                 <p>Grow your business with our marketing strategies.</p>
             </div>
         </div>
     </section>
 
-    <section id="about">
+    <!-- About Section -->
+    <section id="about" style="padding: 4rem 2rem; text-align: center; background: #f9f9f9;">
         <h2>About Us</h2>
         <p>We are a team of experts dedicated to providing top-notch services to help your business succeed.</p>
     </section>
 
-    <section id="contact">
+    <!-- Contact Section -->
+    <section id="contact" style="padding: 4rem 2rem; text-align: center;">
         <h2>Contact Us</h2>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" rows="4" required></textarea>
-            <button type="submit">Send Message</button>
+        <form style="max-width: 400px; margin: 0 auto; display: flex; flex-direction: column; gap: 1rem;">
+            <input type="text" placeholder="Your Name" required style="width: 100%; padding: 0.75rem; border: 1px solid #ccc; border-radius: 5px;">
+            <input type="email" placeholder="Your Email" required style="width: 100%; padding: 0.75rem; border: 1px solid #ccc; border-radius: 5px;">
+            <textarea placeholder="Your Message" rows="4" required style="width: 100%; padding: 0.75rem; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+            <button type="submit" style="background: #333; color: white; padding: 0.75rem; border: none; cursor: pointer; border-radius: 5px; transition: 0.3s;">Send Message</button>
         </form>
     </section>
 
-    <footer>
+    <!-- Footer -->
+    <footer style="text-align: center; background: #333; color: white; padding: 1rem;">
         <p>&copy; 2024 MyWebsite. All rights reserved.</p>
     </footer>
 
